EricMarcon published a site update

--- a/Chao1.html
+++ b/Chao1.html
@@ -3167,7 +3167,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Des estimateurs de la richesse ont été développés pour estimer la richesse réelle à partir d’un inventaire incomplet.</p>
 
-</article></slide><slide class=""><hgroup><h2>Illustration</h2></hgroup><article  class="columns-2" id="illustration">
+</article></slide><slide class=""><hgroup><h2>Illustration</h2></hgroup><article  id="illustration" class="columns-2">
 
 
 
@@ -3337,7 +3337,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Estimateur Chao1 : 462 espèces.</p>
 
-</article></slide><slide class=""><hgroup><h2>Test de l’estimateur</h2></hgroup><article  class="columns-2" id="test-de-lestimateur">
+</article></slide><slide class=""><hgroup><h2>Test de l’estimateur</h2></hgroup><article  id="test-de-lestimateur" class="columns-2">
 
 
 
@@ -3357,7 +3357,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p> </p>
 
-</article></slide><slide class=""><hgroup><h2>Sous-échantillonnage</h2></hgroup><article  class="columns-2" id="sous-échantillonnage">
+</article></slide><slide class=""><hgroup><h2>Sous-échantillonnage</h2></hgroup><article  id="sous-échantillonnage" class="columns-2">
 
 
 
@@ -3375,7 +3375,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p> </p>
 
-</article></slide><slide class=""><hgroup><h2>Et Paracou ?</h2></hgroup><article  class="columns-2" id="et-paracou">
+</article></slide><slide class=""><hgroup><h2>Et Paracou ?</h2></hgroup><article  id="et-paracou" class="columns-2">
 
 
 
@@ -3405,7 +3405,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Pour en savoir plus : Mesures de la biodiversité (<a href='https://hal-agroparistech.archives-ouvertes.fr/cel-01205813' title=''>https://hal-agroparistech.archives-ouvertes.fr/cel-01205813</a>)</p>
 
-</article></slide><slide class=""><hgroup><h2>References</h2></hgroup><article  class="smaller" id="references">
+</article></slide><slide class=""><hgroup><h2>References</h2></hgroup><article  id="references" class="smaller">
 
 <p>Ce document est entièrement reproductible grâce à <a href='https://rmarkdown.rstudio.com/' title=''>RMarkdown</a>. Son code source est hébergé sur GitHub : <a href='https://github.com/EricMarcon/Chao1' title=''>https://github.com/EricMarcon/Chao1</a>.</p>
 
@@ -3413,7 +3413,7 @@ slide:not(.current) .plotly.html-widget{
 
 
 
-<div class="references" id="refs">
+<div id="refs" class="references">
 <div id="ref-Brose2003">
 <p>Brose, Ulrich, Neo D. Martinez, and Richard J. Williams. 2003. “Estimating species richness: Sensitivity to sample coverage and insensitivity to spatial patterns.” <em>Ecology</em> 84 (9): 2364–77. <a href='https://doi.org/10.1890/02-0558' title=''>https://doi.org/10.1890/02-0558</a>.</p></div>
 
